--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "crypto-js": "^4.0.0",
     "formik": "^2.2.1",
+    "identicon.js": "^2.3.3",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -19,9 +21,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
+    "react-transition-group": "latest",
     "web-vitals": "^0.2.4",
-    "yup": "^0.29.3",
-    "react-transition-group": "latest"
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
