--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
-    "react-social-icons": "^4.1.0",
     "react-to-print": "^2.11.0",
     "react-transition-group": "latest",
     "styled-components": "^5.2.1",
@@ -29,7 +28,7 @@
     "yup": "^0.29.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scrяipts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
