--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,14 +21,14 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
+    "react-table": "^7.6.2",
     "react-to-print": "^2.11.0",
     "react-transition-group": "latest",
-    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4",
     "yup": "^0.29.3"
   },
   "scripts": {
-    "start": "react-scrяipts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
